Fixed responsive laptop sized screens
Laptop sized screens (1200-1600) now have predefined screen padding. Grid cars no longer stretched.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,7 +5,9 @@
 */
 
 $primary: #6ABC6A;
+$primary_opaque: hsla(120, 38%, 58%, 0.9);
 $doc_padding: 20vw;
+$doc_mid_plus_padding: 15vw;
 $doc_mid_padding: 10vw;
 $doc_mobile_padding: 20px;
 
@@ -234,7 +236,7 @@ input[type="submit"] {
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.9);
+        background: $primary_opaque;
         z-index: 0;
     }
     .stat_item {
@@ -248,7 +250,7 @@ input[type="submit"] {
         h5 {
             color: #fff;
             margin: 0;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: normal;
         }
     }
@@ -312,9 +314,10 @@ input[type="submit"] {
             #date_Wrap {
                 display: inline-block;
                 #date_switch {
+                    font-weight: bold;
                     border: 0;
                     background: #fff;
-                    border-radius: 4px;
+                    border-radius: 20px;
                     padding: 10px 15px;
                 }
             }
@@ -462,7 +465,30 @@ input[type="submit"] {
 
 /* Now the fun part...responsive */
 
-/* Lets start on low/medium sized desktops */
+@media only screen and (max-width: 1600px) {
+    #primary_navigation{
+        padding: 20px $doc_mid_plus_padding;
+    } 
+
+    /* Home Page */
+    #home-content {
+        padding: 25px $doc_mid_plus_padding;
+    }
+    #home-contact-form {
+        padding: 25px $doc_mid_plus_padding;
+        grid-gap: 20px;
+    }
+
+    /* Order Page */
+    #order_header {
+        padding: 50px $doc_mid_plus_padding;
+    }
+    #order_grid {
+        padding: 20px $doc_mid_plus_padding;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
+
 @media only screen and (max-width: 1200px) {
     #primary_navigation{
         padding: 20px $doc_mid_padding;
